# BrickSim

./: .gitignore  .gitmodules  AGENTS.md  README.md  isaacsim-layout.json  perf_draw.py  perf_none.npy  perf_numpy_vectorized.npy  perf_simple.npy  perf_torch_vectorized.npy  pixi.toml  pyproject.toml  pyrightconfig.base.json  pyrightconfig.json  ruff.toml  thesis_agent_36000.pt  ty.base.toml
extension/source/lego_assemble/cpp/: CMakeLists.txt
extension/source/lego_assemble/cpp/cmake/: FetchIsaacDeps.cmake  IsaacSimTargetDeps.cmake  SdkPatches.cmake
extension/source/lego_assemble/cpp/include/: AlgorithmUtils.h  BrickAllocator.h  BrickNaming.h  BrickSpawner.h  BrickSpecs.h  JointInvMassInertiaSetter.h  LegoBricks.h  LegoGraph.h  LegoJointManager.h  LegoSerialization.h  LegoTokens.h  LegoTopology.h  LegoTopologySerialization.h  LegoUsdBridge.h  LegoWeldConstraint.h  MathUtils.h  ScenePatcher.h  (+5 more)
exts/bricksim/: .gitignore  MANIFEST.in  pyproject.toml  setup.py
exts/bricksim/bricksim/: __init__.py  _entry.py  _native.pyi  extension.py  stable_lego.py  structures.py
exts/bricksim/bricksim/importers/: grid_topology.py  legolization.py  stabletext2brick.py
exts/bricksim/bricksim/mdp/: connection_events.py  connection_state.py  events.py  spawn.py  utils.py
exts/bricksim/bricksim/ui/: connection_overlay.py  frame_time_hud.py  main_ui.py  selection_sync.py  step_one_frame_patch.py  structures_browsers.py  toolbar_patch.py
exts/bricksim/bricksim/utils/: kit_runner.py  matrix_loader.py  topology.py  usd_parse.py
exts/bricksim/config/: extension.toml
native/: .gitignore  CMakeLists.txt  CMakePresets.json  isaac_deps.toml
native/cmake/: AbiCheck.cmake  FetchIsaacDeps.cmake  SdkPatches.cmake
native/cuda/breakage_cuda/: BENCHMARK.md  CMakeLists.txt  README.md  benchmark.html
native/cuda/breakage_cuda/src/: kernels.cu  linalg.cu  qp_solver.cu  ref_cpu.cpp  system.cpp
native/cuda/breakage_cuda/tests/: bench.cpp  test_dense_kernels.cpp  test_full_pipeline.cpp  test_qp_random.cpp
native/modules/bricksim/: api.cppm  vendor.cppm
native/modules/bricksim/core/: connections.cppm  graph.cppm
native/modules/bricksim/omni/: lego_runtime.cppm  lego_world.cppm  usd_physics_bridge.cppm
native/modules/bricksim/physx/: breakage.cppm  constraint_scheduler.cppm  osqp.cppm  overlap_detection.cppm  patcher.cppm  physics_graph.cppm  polygon_clipping.cppm  touching_face_detection.cppm
native/modules/bricksim/usd/: allocator.cppm  author.cppm  geometry.cppm  parse.cppm  specs.cppm  tokens.cppm  usd_graph.cppm
native/modules/bricksim/utils/: conversions.cppm  logging.cppm  math.cppm  multi_key_map.cppm  strings.cppm  type_list.cppm  typed_id.cppm  unordered_pair.cppm
native/modules/lego_assemble/: api.cppm  brick_allocator.cppm  brick_naming.cppm  brick_spawner.cppm  brick_specs.cppm  lego_graph.cppm  lego_joint_manager.cppm  lego_topology.cppm  lego_topology_export.cppm  py.cppm  usd_bridge.cppm  vendor.cppm
native/modules/lego_assemble/core/: assembly.cppm  component_index.cppm  component_labeling.cppm  connections.cppm  graph.cppm  mass.cppm  specs.cppm
native/modules/lego_assemble/io/: json.cppm  topology.cppm
native/modules/lego_assemble/omni/: lego_runtime.cppm  lego_world.cppm  usd_physics_bridge.cppm
native/modules/lego_assemble/physx/: admm_qp.cppm  assembly.cppm  breakage.cppm  constraint_scheduler.cppm  filtering_reset.cppm  lego_world.cppm  osqp.cppm  osqp_old.cppm  patcher.cppm  physics_graph.cppm  physx_maprange_patch_v107.cppm  polygon_clipping.cppm  qdldl.cppm  scene_patcher.cppm  shape_mapping.cppm  touching_face_detection.cppm  usd_physics_bridge.cppm  weld_constraint.cppm
native/modules/lego_assemble/usd/: allocator.cppm  arrange.cppm  author.cppm  brick_spawner.cppm  parse.cppm  specs.cppm  tokens.cppm  usd_graph.cppm  usd_physics_graph.cppm
native/modules/lego_assemble/utils/: base64.cppm  bbox.cppm  c4_rotation.cppm  concepts.cppm  conversions.cppm  dynamic_graph.cppm  eigen_format.cppm  logging.cppm  math.cppm  matrix_serialization.cppm  memory.cppm  metric_system.cppm  multi_key_map.cppm  multi_key_set.cppm  pack2d_maxrect.cppm  pair.cppm  poly_store.cppm  ranges.cppm  sdf.cppm  sdf_path_map.cppm  skip_graph.cppm  strings.cppm  transforms.cppm  type_list.cppm  typed_id.cppm  unique_set.cppm  unordered_pair.cppm  usd_envs.cppm
native/py/: pybind11.cpp  pybind11_json.hpp
native/py/lego_assemble/: native.cppm
native/resources/: lsan.supp
native/sdk_patches/: usd_include.patch
native/shims/bits/: c++config.h
native/tests/: TestBreakage.cpp  TestBrickSpecs.cpp  TestConstraintScheduler.cpp  TestConversions.cpp  TestDynamicGraph.cpp  TestJsonIO.cpp  TestLegoGraph.cpp  TestLegoGraphHooks.cpp  TestLegoGraphMultiSegEdge.cpp  TestLegoGraphPMR.cpp  TestLegoGraphSelfConnect.cpp  TestMultiKeyMap.cpp  TestMultiKeySet.cpp  TestPack2dMaxrect.cpp  TestPhysicsGraph.cpp  TestPhysicsGraphAssemblyClosure.cpp  TestPolyStore.cpp  TestRamanujanLikeSchedulingPolicy.cpp  TestTopologyIO.cpp  TestUsdLegoGraph.cpp
native/tools/: solve_breakage.cpp  static_solve.cpp
python/: .gitignore  MANIFEST.in  pyproject.toml  setup.py
python/bricksim/: __init__.py  __main__.py  _entry.py  colors.py  core.pyi  extension.py  kit_runner.py  stable_lego.py
python/bricksim/assets/: __init__.py
python/bricksim/cli/: assemble_brick_expert.py  convert_topology.py  type_configs.py
python/bricksim/envs/: __init__.py  wrappers.py
python/bricksim/envs/assemble_brick/: __init__.py  env.py  expert.py
python/bricksim/importers/: grid_topology.py  legolization.py  stabletext2brick.py
python/bricksim/mdp/: brick_part.py  cache_token.py  connection_events.py  connection_state.py  connection_thresholds.py  events.py  spawn.py  utils.py
python/bricksim/topology/: ordering.py  voxel_grid.py
python/bricksim/ui/: connection_overlay.py  frame_time_hud.py  main_ui.py  selection_sync.py  step_one_frame_patch.py  structures_browsers.py  toolbar_patch.py
python/bricksim/utils/: breakage_debug.py  brick_usd.py  debug_draw.py  matrix_loader.py  sim.py  topology.py  usd_parse.py
(+268 files in other folders)
