[project]
name = "bricksim-dev"
version = "0.0.0"
description = "BrickSim development environment"
requires-python = ">=3.11,<3.12"
dependencies = [
    "bricksim[all,stablelego]",
    "skrl>=1.4.3",
    "lerobot==0.4.4",
]

[dependency-groups]
dev = [
    "ruff",
    "ty",
]

[tool.uv]
package = false
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]
override-dependencies = [
    # Work around Isaac Sim's unconditional pywin32 dependency on non-Windows platforms.
    "pywin32==306 ; sys_platform == 'win32'",
    # LeRobot requires packaging>=24.2 while Isaac Lab pins packaging<24.
    "packaging==24.2",
    # Isaac Sim requires numpy 1.x.
    "numpy==1.26.4",
]

[tool.uv.sources]
bricksim = { path = "python", editable = true }

[tool.ruff]
force-exclude = true
include = ["python/**/*.py"]
src = ["python"]
target-version = "py311"

[tool.ruff.lint]
# Use pycodestyle, Pyflakes, and pep8-naming, then add import sorting.
select = ["E", "F", "N"]
extend-select = ["I", "D", "DOC201", "TID251"]
preview = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.Any".msg = "Do not use Any. Use a concrete type, Protocol, object, or a local stub."
"typing.cast".msg = "Do not use cast as a blanket escape hatch. Prefer a concrete Protocol or stub."
