[project]
name = "bricksim-dev"
version = "0.0.0"
description = "BrickSim development environment"
requires-python = ">=3.12,<3.13"
dependencies = [
    "bricksim[isaacsim,stablelego]", # TODO: Use bricksim[isaacsim,stablelego] after IsaacLab release
    "skrl>=2",
    "lerobot>=0.5.1",
]

[dependency-groups]
dev = [
    "ruff",
    "ty",
]

[tool.uv]
package = false
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]
override-dependencies = [
    # IsaacSim vs Lerobot
    "packaging==26.0",
    "numpy==2.3.1",
]

[tool.uv.sources]
bricksim = { path = "python", editable = true }

[tool.ruff]
include = ["python/**/*.py"]
src = ["python"]
target-version = "py312"

[tool.ruff.lint]
# Use pycodestyle, Pyflakes, and pep8-naming, then add import sorting.
select = ["E", "F", "N"]
extend-select = ["I", "D", "DOC201", "TID251"]
preview = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.Any".msg = "Do not use Any. Use a concrete type, Protocol, object, or a local stub."
"typing.cast".msg = "Do not use cast as a blanket escape hatch. Prefer a concrete Protocol or stub."
