[project]
name = "bricksim"
version = "0.1.0"
description = "BrickSim: A Physics-Based Simulator for Manipulating Interlocking Brick Assemblies"
requires-python = ">=3.12,<3.13"
dependencies = [
    "accelerate",
    "gymnasium>=1.2",
    "numpy>=2",
    "requests",
    "scipy",
    "torch>=2.7",
    "tqdm",
]

[project.optional-dependencies]
isaacsim = ["isaacsim[all,extscache]==6.0.0"]
isaaclab = ["isaaclab>=3.0.0"]
all = [
    "isaacsim[all,extscache]==6.0.0",
    "isaaclab>=3.0.0",
]
stablelego = ["gurobipy==12.0.3"]

[project.urls]
Repository = "https://github.com/intelligent-control-lab/BrickSim.git"

[project.scripts]
bricksim = "bricksim.__main__:main"
bricksim-convert-topology = "bricksim.cli.convert_topology:main"
bricksim-type-configs = "bricksim.cli.type_configs:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
